--- a/string/給定一個字串，回傳所有的可能組合.md
+++ b/string/給定一個字串，回傳所有的可能組合.md
@@ -5,8 +5,8 @@
 例如:
 
 ```python
->>> tring = 'abc'
->>> allcomb('abc')
+>>> string = 'abc'
+>>> allcomb(string)
 ['a', 'b', 'c', 'ab', 'ac', 'ba', 'bc', 'ca', 'cb', 'abc', 'acb', 'bac', 'bca', 'cab', 'cba']
 ```
 
