--- a/string/給定一個字串，回傳所有的可能組合.md
+++ b/string/給定一個字串，回傳所有的可能組合.md
@@ -69,7 +69,9 @@ def get_combinations(string):
 
 這還沒完成任務，我們距離標準答案，還必須取得:
 
->每一種 **組合** 的所有 **排列** 情形
+```
+每一種組合的所有排列情形
+```
 
 這產生了 `get_permutations` 這個 function:
 
